--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.6.1",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
